// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cheapestTree can calculate the cheapest tree correctly 1`] = `
Object {
  "buyPrice": 20,
  "buyPriceEach": 10,
  "components": Array [
    Object {
      "buyPrice": 84,
      "buyPriceEach": 42,
      "components": undefined,
      "craft": false,
      "decisionPrice": 84,
      "id": 2,
      "output": 1,
      "quantity": 1,
      "totalQuantity": 2,
      "type": "Item",
      "usedQuantity": 2,
    },
    Object {
      "buyPrice": 100,
      "buyPriceEach": 10,
      "components": Array [
        Object {
          "buyPrice": 200,
          "buyPriceEach": 10,
          "components": undefined,
          "craft": false,
          "decisionPrice": 200,
          "id": 4,
          "output": 1,
          "quantity": 2,
          "totalQuantity": 20,
          "type": "Item",
          "usedQuantity": 20,
        },
      ],
      "craft": false,
      "craftPrice": 200,
      "decisionPrice": 100,
      "disciplines": Array [
        "Amoursmith",
      ],
      "id": 3,
      "min_rating": 200,
      "output": 1,
      "quantity": 5,
      "recipe_id": 123,
      "totalQuantity": 10,
      "type": "Recipe",
      "usedQuantity": 10,
    },
    Object {
      "buyPrice": 10000,
      "buyPriceEach": 1000,
      "components": Array [
        Object {
          "buyPrice": 200,
          "buyPriceEach": 10,
          "components": undefined,
          "craft": false,
          "decisionPrice": 200,
          "id": 6,
          "output": 1,
          "quantity": 2,
          "totalQuantity": 20,
          "type": "Item",
          "usedQuantity": 20,
        },
      ],
      "craft": true,
      "craftPrice": 200,
      "decisionPrice": 200,
      "disciplines": Array [
        "Amoursmith",
      ],
      "id": 5,
      "min_rating": 200,
      "output": 1,
      "quantity": 5,
      "recipe_id": 123,
      "totalQuantity": 10,
      "type": "Recipe",
      "usedQuantity": 10,
    },
  ],
  "craft": true,
  "craftPrice": 384,
  "decisionPrice": 384,
  "disciplines": Array [
    "Amoursmith",
  ],
  "id": 1,
  "min_rating": 300,
  "output": 1,
  "quantity": 1,
  "recipe_id": 124,
  "totalQuantity": 2,
  "type": "Recipe",
  "usedQuantity": 2,
}
`;

exports[`cheapestTree can calculate the cheapest tree correctly with available items 1`] = `
Object {
  "buyPrice": 20,
  "buyPriceEach": 10,
  "components": Array [
    Object {
      "buyPrice": 6,
      "buyPriceEach": 1,
      "components": Array [
        Object {
          "buyPrice": 60,
          "buyPriceEach": 10,
          "components": undefined,
          "craft": false,
          "decisionPrice": 60,
          "id": 4,
          "output": 1,
          "quantity": 1,
          "totalQuantity": 6,
          "type": "Item",
          "usedQuantity": 6,
        },
      ],
      "craft": false,
      "craftPrice": 60,
      "decisionPrice": 6,
      "disciplines": Array [
        "Amoursmith",
      ],
      "id": 7,
      "min_rating": 200,
      "output": 1,
      "quantity": 3,
      "recipe_id": 123,
      "totalQuantity": 6,
      "type": "Recipe",
      "usedQuantity": 6,
    },
    Object {
      "buyPrice": 300,
      "buyPriceEach": 100,
      "components": Array [
        Object {
          "buyPrice": 30,
          "buyPriceEach": 10,
          "components": undefined,
          "craft": false,
          "decisionPrice": 30,
          "id": 4,
          "output": 1,
          "quantity": 2,
          "totalQuantity": 6,
          "type": "Item",
          "usedQuantity": 3,
        },
      ],
      "craft": true,
      "craftPrice": 30,
      "decisionPrice": 30,
      "disciplines": Array [
        "Amoursmith",
      ],
      "id": 3,
      "min_rating": 200,
      "output": 1,
      "quantity": 5,
      "recipe_id": 123,
      "totalQuantity": 10,
      "type": "Recipe",
      "usedQuantity": 3,
    },
    Object {
      "buyPrice": 0,
      "buyPriceEach": 25,
      "components": Array [
        Object {
          "buyPrice": 0,
          "buyPriceEach": 1,
          "components": undefined,
          "craft": false,
          "decisionPrice": 0,
          "id": 6,
          "output": 1,
          "quantity": 100,
          "totalQuantity": 0,
          "type": "Item",
          "usedQuantity": 0,
        },
      ],
      "craft": false,
      "craftPrice": 0,
      "decisionPrice": 0,
      "disciplines": Array [
        "Amoursmith",
      ],
      "id": 5,
      "min_rating": 200,
      "output": 1,
      "quantity": 2,
      "recipe_id": 123,
      "totalQuantity": 4,
      "type": "Recipe",
      "usedQuantity": 0,
    },
  ],
  "craft": true,
  "craftPrice": 36,
  "decisionPrice": 36,
  "disciplines": Array [
    "Amoursmith",
  ],
  "id": 1,
  "min_rating": 300,
  "output": 1,
  "quantity": 1,
  "recipe_id": 124,
  "totalQuantity": 2,
  "type": "Recipe",
  "usedQuantity": 2,
}
`;

exports[`cheapestTree can calculate the cheapest tree correctly with force buy items 1`] = `
Object {
  "buyPrice": 20,
  "buyPriceEach": 10,
  "components": Array [
    Object {
      "buyPrice": 1000,
      "buyPriceEach": 100,
      "components": Array [
        Object {
          "buyPrice": 200,
          "buyPriceEach": 10,
          "components": undefined,
          "craft": false,
          "decisionPrice": 200,
          "id": 4,
          "output": 1,
          "quantity": 2,
          "totalQuantity": 20,
          "type": "Item",
          "usedQuantity": 20,
        },
      ],
      "craft": false,
      "craftPrice": 200,
      "decisionPrice": 1000,
      "disciplines": Array [
        "Amoursmith",
      ],
      "id": 3,
      "min_rating": 200,
      "output": 1,
      "quantity": 5,
      "recipe_id": 123,
      "totalQuantity": 10,
      "type": "Recipe",
      "usedQuantity": 10,
    },
  ],
  "craft": true,
  "craftPrice": 1000,
  "decisionPrice": 1000,
  "disciplines": Array [
    "Amoursmith",
  ],
  "id": 1,
  "min_rating": 300,
  "output": 1,
  "quantity": 1,
  "recipe_id": 124,
  "totalQuantity": 2,
  "type": "Recipe",
  "usedQuantity": 2,
}
`;
